<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/iransansmobile"
            android:text="پیشنهادات"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/price_mock"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon"
            android:visibility="invisible" />

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/head_image" />

        <TextView
            android:id="@+id/head_image_left_text"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/head_image"
            android:layout_alignLeft="@id/head_image"
            android:layout_alignStart="@id/head_image"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/requests_count_mock"
            android:visibility="invisible" />

        <TextView
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/head_image_left_text"
            android:layout_alignLeft="@id/head_image_left_text"
            android:layout_alignStart="@id/head_image_left_text"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/requests_count_badge"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/head_image_right_text"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/head_image"
            android:layout_alignEnd="@id/head_image"
            android:layout_alignRight="@id/head_image"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="@string/weight_mock"
            android:visibility="invisible" />

        <TextView
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/head_image_right_text"
            android:layout_alignLeft="@id/head_image_right_text"
            android:layout_alignStart="@id/head_image_right_text"
            android:text="@string/weight_badge"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/head_image_center_text"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/head_image"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/pledge_mock"
            android:visibility="invisible" />

        <TextView
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/head_image_center_text"
            android:layout_alignLeft="@id/head_image_center_text"
            android:layout_alignStart="@id/head_image_center_text"
            android:text="@string/pledge_badge"
            android:visibility="invisible" />


    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!-- avatar and name part -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <TextView
                android:id="@+id/content_avatar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/iransansmobile"
                android:text="عنوان"
                android:textColor="@color/fifafontcolor"
                android:textSize="15sp"
                android:visibility="invisible" />


            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/content_avatar_title"
                android:ems="10"
                android:fontFamily="@font/iransansmobile"
                android:hint="عنوان پیشنهاد"
                android:inputType="text" />

            <ImageView
                android:id="@+id/content_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_avatar_title"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/content_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/content_avatar"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/content_avatar"
                android:layout_toRightOf="@id/content_avatar"
                android:text="@string/client_name_mock"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />


            <ImageView
                android:id="@+id/content_rating_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/content_name_view"
                android:layout_alignStart="@id/content_name_view"
                android:layout_below="@id/content_name_view"
                android:src="@drawable/stars"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/content_rating_stars"
                android:layout_marginBottom="-2dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/content_rating_stars"
                android:layout_toRightOf="@id/content_rating_stars"
                android:text="@string/rating_mock"
                android:textColor="@color/contentBadgeTitle"
                android:textSize="12sp"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow"
                android:visibility="invisible" />

        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textDirection="rtl">

                <EditText
                    android:id="@+id/editText22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:ems="8"
                    android:fontFamily="@font/iransansmobile"
                    android:gravity="top|start"
                    android:hint="شرح پیشنهاد"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="6"
                    android:scrollbars="vertical" />
            </RelativeLayout>


        </LinearLayout>

        <!-- request button -->
        <TextView
            android:id="@+id/content_request_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/btnRequest"
            android:padding="10dp"
            android:text="ارسال"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>